tests/baselines/reference/node10AlternateResult_noResolution.errors.txt
/index.ts(1,21): error TS2307: Cannot find module 'pkg' or its corresponding type declarations.
  There are types at '/node_modules/pkg/definitely-not-index.d.ts', but this result could not be resolved under your current 'moduleResolution' setting. Consider updating to 'node16', 'nodenext', or 'bundler'.


==== /node_modules/pkg/package.json (0 errors) ====
    {
        "name": "pkg",
        "version": "1.0.0",
        "exports": {
            ".": "./definitely-not-index.js"
        }
    }
    
==== /node_modules/pkg/definitely-not-index.d.ts (0 errors) ====
    export {};
    
==== /index.ts (1 errors) ====
    import { pkg } from "pkg";
                        ~~~~~
!!! error TS2307: Cannot find module 'pkg' or its corresponding type declarations.
!!! error TS2307:   There are types at '/node_modules/pkg/definitely-not-index.d.ts', but this result could not be resolved under your current 'moduleResolution' setting. Consider updating to 'node16', 'nodenext', or 'bundler'.
    